# mafia-remake

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bot.py  bot_state.py  build.rs  config.example.json  config.json  fly.toml  game.py  leaderboard_image.py  role_data.py  simulate_game.py  stats_store.py  web_settings.py
.cargo/: config.toml
activity/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
activity/src/: App.tsx  api.ts  discord.ts  styles.css  types.ts
activity/src/components/: ActionPanel.tsx  PhaseTimer.tsx  PlayerList.tsx  RoleCard.tsx  VotePanel.tsx
cogs/: anonymous_chat.py  channel_runtime.py  game_engine.py  game_runner.py  role_guides.py  views.py
docs/: rating_plan.md
scripts/: bootstrap-linux-rust.sh  bootstrap-windows-rust.ps1  build-linux-aarch64.sh  build-linux-glibc.sh  build-linux.sh  build-windows.ps1  run-linux.sh  run-windows.ps1  test-windows.ps1
src/: activity.rs  channel.rs  commands.rs  config.rs  embed.rs  game.rs  http_pool.rs  lib.rs  main.rs  model.rs  runner.rs  stats.rs  system_random.rs  web_settings.rs
src/game/: actions.rs  actors.rs  mod.rs  resolve.rs  vote.rs
tests/: madam_contact.rs  majority.rs
