[package]
name = "mafia-remake"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = "6.1"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
poise = { version = "0.6", default-features = false, features = ["handle_panics"] }
rand = "0.9"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = ["rustls_backend"] }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1
incremental = true

[profile.test.package."*"]
debug = 0

[profile.release]
codegen-units = 22
incremental = true
lto = false
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.maxperf]
inherits = "release"
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
